--- a/devtools/ws_client.html
+++ b/devtools/ws_client.html
@@ -2,213 +2,283 @@
 <html>
 <head>
   <meta charset="utf-8" />
-  <title>Geets Dev Client</title>
+  <title>Geets Dev Client (2-up)</title>
   <style>
-    body { font-family: sans-serif; max-width: 1100px; margin: 20px auto; }
-    input, button, textarea { padding: 8px; margin: 4px 0; width: 100%; }
-    .row { display: grid; grid-template-columns: 1fr 1fr; gap: 12px; }
-    pre { background: #111; color: #0f0; padding: 12px; height: 360px; overflow: auto; }
+    body { font-family: sans-serif; max-width: 1400px; margin: 20px auto; }
+    input, button, textarea { padding: 8px; margin: 4px 0; width: 100%; box-sizing: border-box; }
+    .grid { display: grid; grid-template-columns: 1fr 1fr; gap: 14px; align-items: start; }
+    .card { border: 1px solid #ddd; border-radius: 10px; padding: 12px; }
+    .row { display: grid; grid-template-columns: 1fr 1fr; gap: 10px; }
+    pre { background: #111; color: #0f0; padding: 10px; height: 360px; overflow: auto; border-radius: 8px; }
     .small { font-size: 12px; color: #444; }
+    .muted { color: #666; font-size: 13px; }
+    .title { font-weight: 700; margin-bottom: 8px; }
+    .pill { display:inline-block; padding:2px 8px; border-radius: 999px; background:#eee; font-size:12px; }
+    button { cursor:pointer; }
   </style>
 </head>
 <body>
-  <h2>Geets Dev Client</h2>
+  <h2>Geets Dev Client — 2 clients (A & B)</h2>
+  <div class="muted">
+    Цель: подключить два WS клиента с разными токенами и увидеть, что события приходят друг другу.
+  </div>
 
-  <div class="row">
-    <div>
-      <label>API base</label>
-      <input id="apiBase" value="http://127.0.0.1:8000" />
-      <label>WS base</label>
-      <input id="wsBase" value="ws://127.0.0.1:8000/ws" />
-      <label>Token</label>
-      <input id="token" placeholder="paste JWT token here" />
-
-      <button id="connectBtn">Connect WS</button>
-      <button id="disconnectBtn">Disconnect</button>
-
-      <div class="small" id="status">status: idle</div>
-
-      <hr />
-
-      <label>Conversation ID</label>
-      <input id="convId" placeholder="uuid" />
-
-      <label>Message body</label>
-      <input id="msgBody" value="hello from dev client" />
-
-      <button id="sendCreateMsg">WS: message.create</button>
-
-      <label>Message ID (for delivered)</label>
-      <input id="messageId" placeholder="uuid from received message" />
-      <button id="sendDelivered">WS: message.delivered</button>
-
-      <label>Last seen message id</label>
-      <input id="lastSeenId" placeholder="uuid" />
-      <button id="sendSeen">WS: message.seen</button>
-
-      <button id="sendPing">WS: ping</button>
-    </div>
-
-    <div>
-      <label>Raw send</label>
-      <textarea id="rawSend" rows="6">{ "type": "ping", "payload": { "ts": "now" } }</textarea>
-      <button id="sendRaw">Send raw</button>
-
-      <label>Log</label>
-      <pre id="log"></pre>
+  <div class="card">
+    <div class="row">
+      <div>
+        <label>WS base</label>
+        <input id="wsBase" value="ws://127.0.0.1:8000/ws" />
+        <div class="small">Должен быть ваш backend WS endpoint. Токен будет добавлен как ?token=...</div>
+      </div>
+      <div>
+        <label>Conversation ID (общий)</label>
+        <input id="convId" placeholder="uuid" />
+        <div class="small">Одинаковый для A и B. Создай conversation в API или возьми существующий id.</div>
+      </div>
     </div>
   </div>
 
+  <div class="grid">
+
+    <!-- CLIENT A -->
+    <div class="card">
+      <div class="title">Client A <span class="pill" id="statusA">idle</span></div>
+
+      <label>Token A</label>
+      <input id="tokenA" placeholder="paste JWT token A" />
+
+      <div class="row">
+        <button id="connectA">Connect A</button>
+        <button id="disconnectA">Disconnect A</button>
+      </div>
+
+      <label>Message (A → conversation)</label>
+      <input id="msgA" value="hello from A" />
+      <button id="sendA">WS: message.create (A)</button>
+
+      <div class="row">
+        <button id="seenA">WS: message.seen (A up to last received)</button>
+        <button id="pingA">WS: ping (A)</button>
+      </div>
+
+      <label class="small">
+        <input type="checkbox" id="autoSeenA" />
+        auto-send seen when A receives a message in this conversation
+      </label>
+
+      <label>Log A</label>
+      <pre id="logA"></pre>
+    </div>
+
+    <!-- CLIENT B -->
+    <div class="card">
+      <div class="title">Client B <span class="pill" id="statusB">idle</span></div>
+
+      <label>Token B</label>
+      <input id="tokenB" placeholder="paste JWT token B" />
+
+      <div class="row">
+        <button id="connectB">Connect B</button>
+        <button id="disconnectB">Disconnect B</button>
+      </div>
+
+      <label>Message (B → conversation)</label>
+      <input id="msgB" value="hello from B" />
+      <button id="sendB">WS: message.create (B)</button>
+
+      <div class="row">
+        <button id="seenB">WS: message.seen (B up to last received)</button>
+        <button id="pingB">WS: ping (B)</button>
+      </div>
+
+      <label class="small">
+        <input type="checkbox" id="autoSeenB" />
+        auto-send seen when B receives a message in this conversation
+      </label>
+
+      <label>Log B</label>
+      <pre id="logB"></pre>
+    </div>
+
+  </div>
+
+  <div class="card">
+    <div class="title">Raw send (optional)</div>
+    <div class="row">
+      <div>
+        <label>Client</label>
+        <select id="rawClient">
+          <option value="A">A</option>
+          <option value="B">B</option>
+        </select>
+      </div>
+      <div></div>
+    </div>
+    <label>JSON</label>
+    <textarea id="rawSend" rows="5">{ "type": "ping", "payload": { "ts": "now" } }</textarea>
+    <button id="sendRaw">Send raw</button>
+  </div>
+
 <script>
-  let ws = null;
-  let pingTimer = null;
-  let pongTimer = null;
-  let lastPong = Date.now();
+  function $(id){ return document.getElementById(id); }
 
-  const logEl = document.getElementById("log");
-  const statusEl = document.getElementById("status");
+  function makeClient(name) {
+    const logEl = $(name === "A" ? "logA" : "logB");
+    const statusEl = $(name === "A" ? "statusA" : "statusB");
+    const tokenEl = $(name === "A" ? "tokenA" : "tokenB");
+    const autoSeenEl = $(name === "A" ? "autoSeenA" : "autoSeenB");
 
-  function log(...args) {
-    const line = args.map(a => typeof a === "string" ? a : JSON.stringify(a)).join(" ");
-    logEl.textContent = `[${new Date().toISOString()}] ${line}\n` + logEl.textContent;
-  }
+    let ws = null;
+    let pingTimer = null;
+    let pongTimer = null;
+    let lastSeenMessageId = null;
 
-  function setStatus(s) {
-    statusEl.textContent = `status: ${s}`;
-  }
+    function log(...args) {
+      const line = args.map(a => typeof a === "string" ? a : JSON.stringify(a)).join(" ");
+      logEl.textContent = `[${new Date().toISOString()}] ${line}\n` + logEl.textContent;
+    }
 
-  function getWsUrl() {
-    const wsBase = document.getElementById("wsBase").value.trim();
-    const token = document.getElementById("token").value.trim();
-    const u = new URL(wsBase);
-    if (token) u.searchParams.set("token", token);
-    return u.toString();
-  }
+    function setStatus(s) {
+      statusEl.textContent = s;
+    }
 
-    function startHeartbeat() {
-    stopHeartbeat();
-
-    const doPing = () => {
-        if (!ws || ws.readyState !== WebSocket.OPEN) return;
-
-        // перед новым ожиданием — гасим старое
-        if (pongTimer) {
-        clearTimeout(pongTimer);
-        pongTimer = null;
-        }
-
-        send({ type: "ping", payload: { ts: new Date().toISOString() } });
-
-        // ждём pong максимум 4 секунды
-        pongTimer = setTimeout(() => {
-        log("pong timeout -> closing");
-        try { ws.close(1001, "pong timeout"); } catch {}
-        }, 4000);
-    };
-
-    // первый ping сразу
-    doPing();
-
-    // дальше каждые 10 секунд
-    pingTimer = setInterval(doPing, 10000);
+    function getWsUrl() {
+      const wsBase = $("wsBase").value.trim();
+      const token = tokenEl.value.trim();
+      const u = new URL(wsBase);
+      if (token) u.searchParams.set("token", token);
+      return u.toString();
     }
 
     function stopHeartbeat() {
-    if (pingTimer) clearInterval(pingTimer);
-    if (pongTimer) clearTimeout(pongTimer);
-    pingTimer = null;
-    pongTimer = null;
+      if (pingTimer) clearInterval(pingTimer);
+      if (pongTimer) clearTimeout(pongTimer);
+      pingTimer = null;
+      pongTimer = null;
     }
 
+    function startHeartbeat() {
+      stopHeartbeat();
 
-  function connect() {
-    const url = getWsUrl();
-    log("connecting", url);
-    setStatus("connecting");
+      const doPing = () => {
+        if (!ws || ws.readyState !== WebSocket.OPEN) return;
 
-    ws = new WebSocket(url);
-
-    ws.onopen = () => {
-      log("ws open");
-      setStatus("open");
-      lastPong = Date.now();
-      startHeartbeat();
-    };
-
-    ws.onmessage = (ev) => {
-      let msg;
-      try { msg = JSON.parse(ev.data); } catch { log("non-json", ev.data); return; }
-
-      if (msg.type === "pong") {
-        lastPong = Date.now();
         if (pongTimer) { clearTimeout(pongTimer); pongTimer = null; }
-        log("pong");
+
+        send({ type: "ping", payload: { ts: new Date().toISOString(), client: name }});
+
+        pongTimer = setTimeout(() => {
+          log("pong timeout -> closing");
+          try { ws.close(1001, "pong timeout"); } catch {}
+        }, 4000);
+      };
+
+      doPing();
+      pingTimer = setInterval(doPing, 10000);
+    }
+
+    function connect() {
+      const url = getWsUrl();
+      log("connecting", url);
+      setStatus("connecting");
+
+      ws = new WebSocket(url);
+
+      ws.onopen = () => {
+        log("ws open");
+        setStatus("open");
+        startHeartbeat();
+      };
+
+      ws.onmessage = (ev) => {
+        let msg;
+        try { msg = JSON.parse(ev.data); } catch { log("non-json", ev.data); return; }
+
+        if (msg.type === "pong") {
+          if (pongTimer) { clearTimeout(pongTimer); pongTimer = null; }
+          log("pong");
+          return;
+        }
+
+        // Helpful auto-fill: remember last message id
+        if ((msg.type === "message.new" || msg.type === "message.create") && msg.payload?.id) {
+          lastSeenMessageId = msg.payload.id;
+
+          // auto seen if enabled and message belongs to current conversation (best-effort)
+          const conv = $("convId").value.trim();
+          if (autoSeenEl.checked && msg.payload?.conversation_id === conv) {
+            send({ type: "message.seen", payload: { conversation_id: conv, last_seen_message_id: lastSeenMessageId }});
+          }
+        }
+
+        log("recv", msg);
+      };
+
+      ws.onclose = (ev) => {
+        stopHeartbeat();
+        log("ws close", { code: ev.code, reason: ev.reason });
+        setStatus("closed");
+        ws = null;
+      };
+
+      ws.onerror = () => log("ws error");
+    }
+
+    function disconnect() {
+      stopHeartbeat();
+      if (ws) ws.close(1000, "manual");
+      ws = null;
+      setStatus("idle");
+      log("manual disconnect");
+    }
+
+    function send(obj) {
+      if (!ws || ws.readyState !== WebSocket.OPEN) {
+        log("send failed: ws not open");
         return;
       }
-
-      // helpful auto-fill:
-      if (msg.type === "message.create" && msg.payload?.id) {
-        document.getElementById("messageId").value = msg.payload.id;
-        document.getElementById("lastSeenId").value = msg.payload.id;
-      }
-
-      log("recv", msg);
-    };
-
-    ws.onclose = (ev) => {
-      stopHeartbeat();
-      log("ws close", { code: ev.code, reason: ev.reason });
-      setStatus("closed");
-      ws = null;
-    };
-
-    ws.onerror = () => {
-      log("ws error");
-    };
-  }
-
-  function disconnect() {
-    stopHeartbeat();
-    if (ws) ws.close(1000, "manual");
-    ws = null;
-    setStatus("idle");
-    log("manual disconnect");
-  }
-
-  function send(obj) {
-    if (!ws || ws.readyState !== WebSocket.OPEN) {
-      log("send failed: ws not open");
-      return;
+      ws.send(JSON.stringify(obj));
+      log("sent", obj);
     }
-    ws.send(JSON.stringify(obj));
-    log("sent", obj);
+
+    function sendCreate(body) {
+      const conversation_id = $("convId").value.trim();
+      send({ type: "message.create", payload: { conversation_id, body }});
+    }
+
+    function sendSeen() {
+      const conversation_id = $("convId").value.trim();
+      if (!lastSeenMessageId) {
+        log("no last message id yet");
+        return;
+      }
+      send({ type: "message.seen", payload: { conversation_id, last_seen_message_id: lastSeenMessageId }});
+    }
+
+    return { connect, disconnect, send, sendCreate, sendSeen, log };
   }
 
-  document.getElementById("connectBtn").onclick = connect;
-  document.getElementById("disconnectBtn").onclick = disconnect;
+  const A = makeClient("A");
+  const B = makeClient("B");
 
-  document.getElementById("sendPing").onclick = () => send({ type: "ping", payload: { ts: new Date().toISOString() }});
+  $("connectA").onclick = () => A.connect();
+  $("disconnectA").onclick = () => A.disconnect();
+  $("sendA").onclick = () => A.sendCreate($("msgA").value);
+  $("seenA").onclick = () => A.sendSeen();
+  $("pingA").onclick = () => A.send({ type: "ping", payload: { ts: new Date().toISOString(), client: "A" }});
 
-  document.getElementById("sendCreateMsg").onclick = () => {
-    const conversation_id = document.getElementById("convId").value.trim();
-    const body = document.getElementById("msgBody").value;
-    send({ type: "message.create", payload: { conversation_id, body }});
-  };
+  $("connectB").onclick = () => B.connect();
+  $("disconnectB").onclick = () => B.disconnect();
+  $("sendB").onclick = () => B.sendCreate($("msgB").value);
+  $("seenB").onclick = () => B.sendSeen();
+  $("pingB").onclick = () => B.send({ type: "ping", payload: { ts: new Date().toISOString(), client: "B" }});
 
-  document.getElementById("sendDelivered").onclick = () => {
-    const message_id = document.getElementById("messageId").value.trim();
-    send({ type: "message.delivered", payload: { message_id }});
-  };
-
-  document.getElementById("sendSeen").onclick = () => {
-    const conversation_id = document.getElementById("convId").value.trim();
-    const last_seen_message_id = document.getElementById("lastSeenId").value.trim();
-    send({ type: "message.seen", payload: { conversation_id, last_seen_message_id }});
-  };
-
-  document.getElementById("sendRaw").onclick = () => {
-    const txt = document.getElementById("rawSend").value;
-    try { send(JSON.parse(txt)); } catch { log("raw json invalid"); }
+  $("sendRaw").onclick = () => {
+    const who = $("rawClient").value;
+    const txt = $("rawSend").value;
+    let obj;
+    try { obj = JSON.parse(txt); } catch { alert("raw json invalid"); return; }
+    (who === "A" ? A : B).send(obj);
   };
 </script>
 </body>
